# nns

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.dox  makefile
src/: AbInitioHamiltonian.cxx  AbInitioHamiltonian.hpp  Basis.cxx  Basis.hpp  BosonicHamiltonian.hpp  CMakeLists.txt  CoeffType.hpp  ConvLayer.cxx  ConvLayer.hpp  CostFunction.hpp  DenseLayer.cxx  DenseLayer.hpp  Determinant.cxx  Determinant.hpp  EnergyCF.cxx  EnergyCF.hpp  EnergyEsMarkov.cxx  EnergyEsMarkov.hpp  EnergyEstimator.cxx  EnergyEstimator.hpp  Evaluator.hpp  FermionicHamiltonian.cxx  FermionicHamiltonian.hpp  Hamiltonian.cxx  Hamiltonian.hpp  InputLayer.cxx  InputLayer.hpp  Layer.cxx  Layer.hpp  LayerStructure.cxx  LayerStructure.hpp  ListGen.cxx  ListGen.hpp  MarkovSampler.cxx  MarkovSampler.hpp  MetropolisSampler.cxx  MetropolisSampler.hpp  ModelSys.cxx  ModelSys.hpp  NNWLib.hpp  (+29 more)
src/CostFunctions/: AllCostFunctions.hpp  CMakeLists.txt  CostFunction.hpp  EnergyCF.cxx  EnergyCF.hpp  EnergyCFBaseClass.hpp  EnergyEs.cxx  EnergyEs.hpp  EnergyEsForward.hpp  EnergyEsMarkov.cxx  EnergyEsMarkov.hpp  EnergyEsPreFetched.cxx  EnergyEsPreFetched.hpp  EnergyEstimator.cxx  EnergyEstimator.hpp  NormCF.cxx  NormCF.hpp  SubspaceCF.cxx  SubspaceCF.hpp
src/Hamiltonian/: AbInitioHamiltonian.cxx  AbInitioHamiltonian.hpp  AllHamiltonians.hpp  BosonicHamiltonian.cxx  BosonicHamiltonian.hpp  CMakeLists.txt  FermiHubbardHamiltonian.cxx  FermiHubbardHamiltonian.hpp  FermionicHamiltonian.cxx  FermionicHamiltonian.hpp  Hamiltonian.cxx  Hamiltonian.hpp  HeisenbergHamiltonian.cxx  HeisenbergHamiltonian.hpp  Lattice.cxx  Lattice.hpp  LatticeHamiltonian.cxx  LatticeHamiltonian.hpp  LocalQN.hpp  SparseHMatrix.cxx  SparseHMatrix.hpp  TwoBodyHamiltonian.cxx  TwoBodyHamiltonian.hpp
src/Hamiltonian/ExcitationGenerators/: AllExcitationGenerators.hpp  CMakeLists.txt  ExcitationGenerator.cxx  ExcitationGenerator.hpp  ExcitmatType.hpp  LatticeExcitgen.cxx  LatticeExcitgen.hpp  ProbUpdater.cxx  ProbUpdater.hpp  RSHubbardExcitgen.cxx  RSHubbardExcitgen.hpp  UniformExcitgen.cxx  UniformExcitgen.hpp  WeightedExcitgen.cxx  WeightedExcitgen.hpp  WeightedSelector.cxx  WeightedSelector.hpp  defaultExcitgensMap.cxx  defaultExcitgensMap.hpp
src/HilbertSpace/: AllBasis.hpp  Basis.cxx  Basis.hpp  BasisGenerator.cxx  BasisGenerator.hpp  CMakeLists.txt  Determinant.cxx  Determinant.hpp  FermionBasis.cxx  FermionBasis.hpp
src/Network/: AllParametrizations.hpp  CMakeLists.txt  DirectParametrization.cxx  DirectParametrization.hpp  LayerStructure.cxx  LayerStructure.hpp  Nnw.cxx  Nnw.hpp  Parametrization.cxx  Parametrization.hpp  ParametrizationForward.hpp  RBM.cxx  RBM.hpp  TrialWfPara.cxx  TrialWfPara.hpp  TrialWfParaForward.hpp  calcNabla.hpp
src/Network/Layers/: CMakeLists.txt  ConvLayer.cxx  ConvLayer.hpp  DenseLayer.cxx  DenseLayer.hpp  InputLayer.cxx  InputLayer.hpp  (+2 more)
src/Samplers/: AllSamplers.hpp  CMakeLists.txt  DefaultSampler.hpp  FullSampler.cxx  FullSampler.hpp  ListGen.cxx  ListGen.hpp  MetropolisSampler.cxx  MetropolisSampler.hpp  Sampler.cxx  Sampler.hpp  UmbrellaSampler.cxx  UmbrellaSampler.hpp
src/Solvers/: ADAM.cxx  ADAM.hpp  AcceleratedGradientDescent.cxx  AcceleratedGradientDescent.hpp  AllSolvers.hpp  CMakeLists.txt  Solver.hpp  StochasticGradientDescent.hpp  StochasticReconfiguration.cxx  StochasticReconfiguration.hpp
src/math/: CMakeLists.txt  MathFunctions.cxx  MathFunctions.hpp  constants.hpp
src/utilities/: CMakeLists.txt  DeepCpyUniquePtr.hpp  Errors.cxx  Errors.hpp  InputStateGenerator.cxx  InputStateGenerator.hpp  MatrixTypeDefine.hpp  RNGWrapper.hpp  SpinConfig.hpp  State.hpp  StateForward.hpp  TypeDefine.hpp  nnwUtilities.cxx  nnwUtilities.hpp  sorting.hpp
test/: CMakeLists.txt  compile.sh  defaultSystem.cxx  defaultSystem.hpp  testAbInitioHam.cxx  testAlg.cxx  testAlgAb.cxx  testBasis.cxx  testCF.cxx  testComponents.cxx  testComponents.hpp  testDet.cxx  testDeterministicHeisenberg.cxx  testDirect.cxx  testEigen.cxx  testExcitgen.cxx  testFullSamplerDirect.cxx  testHam.cxx  testHeisenberg.cxx  testMetropolis.cxx  testNnw.cxx  testPreTrain.cxx  testRBM.cxx  testRBMAIH.cxx  testRBMHeisenberg.cxx  testRBMHub.cxx  testRBMMet.cxx  testRandom.cxx  testSampler.cxx  testStateSort.cxx  testSubspaceCF.cxx  testTrainTrial.cxx  testTrialWfPara.cxx  testUmbrella.cxx
(+93 files in other folders)
