# set the current path
set(TEST_COMMON ${CMAKE_CURRENT_SOURCE_DIR}/defaultSystem.cxx ${CMAKE_CURRENT_SOURCE_DIR}/testComponents.cxx)

add_library(testUtil SHARED ${TEST_COMMON})

#define macro for adding tests
macro (cadd_test testName)
      add_executable(${testName} ${CMAKE_CURRENT_SOURCE_DIR}/${testName}.cxx)
      target_link_libraries(${testName} networkVMC testUtil)
endmacro()

# add the executables
cadd_test(testAbInitioHam)
cadd_test(testBasis)
cadd_test(testCF)
cadd_test(testDet)
cadd_test(testDeterministicHeisenberg)
cadd_test(testDirect)
cadd_test(testEigen)
cadd_test(testExcitgen)
cadd_test(testFullSamplerDirect)
cadd_test(testHam)
cadd_test(testHeisenberg)
cadd_test(testMetropolis)
cadd_test(testNnw)
cadd_test(testPreTrain)
cadd_test(testRandom)
cadd_test(testRBM)
cadd_test(testRBMHeisenberg)
cadd_test(testRBMMet)
cadd_test(testStateSort)
cadd_test(testTrialWfPara)
cadd_test(testUmbrella)
cadd_test(testRBMAIH)
cadd_test(testTrainTrial)
cadd_test(testRBMHub)
